# tpm2ssh-stack

./: .gitignore  AGENTS.md  Cargo.toml  PLAN.md  README.md  ed-testkey  ed-testkey.pub  flake.nix  flow.sh  rust-toolchain.toml  skills-lock.json
crates/tpmctl-cli/: Cargo.toml
crates/tpmctl-cli/src/: args.rs  io.rs  main.rs  validation.rs
crates/tpmctl-cli/src/commands/: derive.rs  ecdh.rs  hmac.rs  io.rs  keygen.rs  mod.rs  pubkey.rs  seal.rs  sign.rs  unseal.rs
crates/tpmctl-cli/tests/: cli_smoke.rs
crates/tpmctl-core/: Cargo.toml  README.md
crates/tpmctl-core/src/: api.rs  api.test.rs  config.rs  derive.rs  derive.test.rs  derive_domain.rs  ecdh.rs  ecdh.test.rs  error.rs  handle.rs  hmac.rs  hmac.test.rs  keygen.rs  lib.rs  lib.test.rs  output.rs  output.test.rs  pubkey.rs  pubkey.test.rs  seal.rs  seal.test.rs  sign.rs  sign.test.rs  store.rs  store.test.rs  tcti.rs  tpm.rs  tpm.test.rs
crates/tpmctl-core/src/crypto/: derive.rs  derive.test.rs  ed25519.rs  ed25519.test.rs  ethereum.rs  ethereum.test.rs  mod.rs  p256.rs  p256.test.rs  secp256k1.rs  secp256k1.test.rs
crates/tpmctl-core/src/derive/: ed25519.rs  ed25519.test.rs  ethereum.rs  ethereum.test.rs  mod.rs  mod.test.rs  p256.rs  p256.test.rs  primitives.rs  primitives.test.rs  secp256k1.rs  secp256k1.test.rs  seed.rs  seed.test.rs  validation.rs  validation.test.rs
crates/tpmctl-core/src/ecdh/: mod.rs  mod.test.rs
crates/tpmctl-core/src/hmac/: mod.rs  mod.test.rs
crates/tpmctl-core/src/keygen/: mod.rs  mod.test.rs
crates/tpmctl-core/src/pubkey/: mod.rs  mod.test.rs
crates/tpmctl-core/src/seal/: mod.rs  mod.test.rs
crates/tpmctl-core/src/sign/: mod.rs  mod.test.rs
crates/tpmctl-core/src/tpm/: context.rs  crypto_ops.rs  handle.rs  mod.rs  mod.test.rs  object.rs  registry.rs
crates/tpmctl-core/tests/: derive.rs  derive_ed25519.rs  derive_matrix.rs  derive_p256.rs  derive_secp256k1.rs  ecdh.rs  hmac.rs  seal.rs  sign.rs  simulator_harness.rs
crates/tpmctl-core/tests/derive/: ed25519.rs  matrix.rs  p256.rs  secp256k1.rs
crates/tpmctl-core/tests/ecdh/: api.rs  lifecycle.rs  native.rs
crates/tpmctl-core/tests/hmac/: api.rs  basic.rs  boundaries.rs  failures.rs  hashes.rs  persistence.rs
crates/tpmctl-core/tests/seal/: basic.rs  facade.rs  failures.rs  handles.rs  metadata.rs  native.rs
crates/tpmctl-core/tests/sign/: api.rs  by_id.rs  failures.rs  lifecycle.rs  matrix.rs
crates/tpmctl-core/tests/support/: mod.rs
crates/tpmctl-pkcs11/: Cargo.toml  README.md
crates/tpmctl-pkcs11/src/: lib.rs
pkcs11/: Cargo.toml  README.md
pkcs11/src/: lib.rs
tpm2-derive/: Cargo.toml  README.md  RETHINK.md
tpm2-derive/.mythos-review/2026-04-23-cli-surface/: README.md  hunt-charter.md  run-manifest.json
tpm2-derive/.mythos-review/2026-04-23-cli-surface/briefs/: segment-01.md  segment-02.md
tpm2-derive/.mythos-review/2026-04-23-cli-surface/candidates/: F-002-duplicate-context-last-wins.md
tpm2-derive/.mythos-review/2026-04-23-cli-surface/handoffs/: F-001-invalid-derivation-defaults-survive-setup-and-load.md
tpm2-derive/.mythos-review/2026-04-23-cli-surface/ledgers/: finding-ledger.md
tpm2-derive/.mythos-review/2026-04-23-cli-surface/rankings/: hotspot-ranking.md  segment-hotspots.json  top50.json
tpm2-derive/.mythos-review/2026-04-23-cli-surface/reports/: deduped-findings.md  final-report.md  review-summary.md
tpm2-derive/.mythos-review/2026-04-23-cli-surface/templates/: orchestrator-runbook.md
tpm2-derive/.mythos-review/2026-04-23-cli-surface/validated/: F-001-invalid-derivation-defaults-survive-setup-and-load.md
tpm2-derive/.mythos-review/2026-04-23-crypto-backends/: README.md  hunt-charter.md  run-manifest.json
tpm2-derive/.mythos-review/2026-04-23-crypto-backends/briefs/: hunter-01.md  hunter-02.md  hunter-03.md
tpm2-derive/.mythos-review/2026-04-23-crypto-backends/candidates/: MSR-2026-04-23-crypto-backends-001.md
tpm2-derive/.mythos-review/2026-04-23-crypto-backends/checkpoints/: review-notes.md
tpm2-derive/.mythos-review/2026-04-23-crypto-backends/evidence/: identity-dot-layout-repro.txt  seed-dot-overwrite-delete-repro.txt
tpm2-derive/.mythos-review/2026-04-23-crypto-backends/handoffs/: MSR-2026-04-23-crypto-backends-001.md
tpm2-derive/.mythos-review/2026-04-23-crypto-backends/ledgers/: finding-ledger.md
tpm2-derive/.mythos-review/2026-04-23-crypto-backends/rankings/: all-hotspots.json
tpm2-derive/.mythos-review/2026-04-23-crypto-backends/reports/: deduped-findings.md  final-report.md  segment-hotspot-ranking.md
tpm2-derive/.mythos-review/2026-04-23-crypto-backends/templates/: orchestrator-runbook.md
tpm2-derive/.mythos-review/2026-04-23-crypto-backends/validated/: MSR-2026-04-23-crypto-backends-001.md
tpm2-derive/.mythos-review/2026-04-23-sign-ssh/: README.md  hunt-charter.md  run-manifest.json
tpm2-derive/.mythos-review/2026-04-23-sign-ssh/briefs/: segment-hunter-01.md  segment-hunter-02.md  summary.tsv  (+1 more)
tpm2-derive/.mythos-review/2026-04-23-state-model/: README.md  hunt-charter.md  run-manifest.json
tpm2-derive/.mythos-review/2026-04-23-tests-subprocess/: README.md  hunt-charter.md  run-manifest.json
tpm2-derive/decisions/: 2026-04-22-unify-cli-surface-across-native-prf-seed.md
tpm2-derive/plans/: 2026-04-22-cli-unification-implementation-plan.md  2026-04-23-security-hardening-implementation-plan.md  2026-04-23-security-review-followups.md
tpm2-derive/src/: backend.rs  error.rs  lib.rs  ops.rs
tpm2-derive/src/backend/: parser.rs  recommend.rs  subprocess.rs  tss_esapi.rs
tpm2-derive/src/cli/: args.rs  mod.rs  render.rs
tpm2-derive/src/crypto/: mod.rs
tpm2-derive/src/model/: capability.rs  command.rs  core.rs  diagnostic.rs  envelope.rs  identity.rs  mod.rs  profile.rs  state.rs
tpm2-derive/src/ops/: derive.rs  encrypt.rs  enforcement.rs  keygen.rs  native.rs  prf.rs  seed.rs  shared.rs  sign.rs  ssh.rs  verify.rs
tpm2-derive/tests/: real_tpm_cli.rs
tpm2-derive/tests/support/: mod.rs
tpm2ssh/: Cargo.toml  README.md
tpm2ssh-prfd/: Cargo.toml  ed-testkey  ed-testkey.pub
tpm2ssh-prfd/src/: main.rs
tpm2ssh/src/: main.rs
(+94 files in other folders)
