[workspace]
members = [
  "crates/tpmctl-core",
  "crates/tpmctl-cli",
  "crates/tpmctl-pkcs11",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "Apache-2.0"
repository = "https://github.com/arcka/tpm2ssh-stack"

[workspace.dependencies]
base64 = "0.22"
clap = { version = "4.5.38", features = ["derive", "env"] }
hex = "0.4"
is-terminal = "0.4"
p256 = { version = "0.13", features = ["ecdsa", "pkcs8", "pem"] }
pkcs11-sys = "0.2.25"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10"
tempfile = "3.27.0"
thiserror = "2.0.17"
tss-esapi = "7.6.0"
tpmctl-core = { path = "crates/tpmctl-core" }
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }
