[package]
name = "tpm2-derive"
version = "0.1.0"
edition = "2024"
description = "TPM-backed key operations with native, PRF, and seed modes"
license = "Apache-2.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "tpm2-derive"
path = "src/bin/tpm2-derive.rs"

[features]
default = ["backend-tpm-tools"]
backend-tpm-tools = []
backend-memory = []
backend-tss-esapi = []

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
hkdf = "0.12.4"
secrecy = "0.10.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tempfile = "3.27.0"
thiserror = "2.0.17"
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }
