[package]
name = "tpm2ssh-prfd"
version = "0.1.0"
edition = "2024"

[dependencies]
russh = "0.60"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hkdf = "0.12"
sha2 = "0.10"
base64 = "0.22"
rand = "=0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
hex = "0.4"
chrono = "0.4"
