[package]
name = "tpm2ssh"
version = "0.1.0"
edition = "2024"

[dependencies]
p256 = { version = "0.13", features = ["ecdsa", "ecdh"] }
hkdf = "0.12"
sha2 = "0.10"
ecdsa = "0.16.9"
ssh-key = { version = "0.6.7", features = ["ecdsa", "p256", "ed25519"] }
rpassword = "7.4.0"
libc = "0.2.182"
whoami = "2.1.1"
hex = "0.4.3"
