[package]
name = "tpmctl-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Thin command-line frontend for tpmctl-core"

[[bin]]
name = "tpmctl"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde_json = "1"
thiserror = "2"
tpmctl-core = { path = "../tpmctl-core" }
