[package]
name = "tpmctl-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Reusable core contracts and TPM helpers for TPM-backed tpmctl operations"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tss-esapi = "7.6.0"

[dev-dependencies]
tempfile = "3"
