[package]
name = "tpmctl-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Reusable core contracts, TPM helpers, and command-domain APIs for TPM-backed tpmctl operations"

[dependencies]
base64 = "0.22"
hex = "0.4"
hmac-crate = { package = "hmac", version = "0.12" }
p256 = { version = "0.13", features = ["ecdsa", "pkcs8", "pem"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tss-esapi = "7.6.0"
zeroize = "1"

[dev-dependencies]
tempfile = "3"
