[package]
name = "tpmctl-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Reusable core contracts, TPM helpers, command-domain APIs, and derived-key crypto for tpmctl"

[dependencies]
base64 = "0.22"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
hex = "0.4"
getrandom = "0.3"
hkdf = "0.12"
hmac-crate = { package = "hmac", version = "0.12" }
k256 = { version = "0.13", features = ["ecdsa", "pkcs8", "pem"] }
p256 = { version = "0.13", features = ["ecdsa", "pkcs8", "pem"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sha3 = "0.10"
signature = "2.2"
thiserror = "2"
tss-esapi = "7.6.0"
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
